# admin-design-system

./: .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  .release-it.json  CHANGELOG.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  deploy.yml  preview.yml  python-ci.yml  release-python.yml  release.yml
.husky/: pre-commit
apps/docs/: astro.config.mjs  package.json  tsconfig.json
apps/docs/plugins/: remark-example.mjs
apps/docs/plugins/example/: ControlsPanel.tsx  Example.astro  LiveSource.tsx  ReactPreview.tsx  buildPreview.mjs  index.mjs  virtual-previews.mjs
apps/docs/public/: robots.txt
apps/docs/scripts/: generate-skill.mjs  skill-header.md
apps/docs/src/: changelog.d.ts  version.ts
apps/docs/src/components/: ColorCopy.astro  ColorFamily.astro  ColorRamp.astro  Example.astro  InstallCommand.astro  Sidebar.astro  SiteTitle.astro
apps/docs/src/content/docs/: index.mdx
apps/docs/src/demos/: CheckboxFieldDemo.tsx  FieldEmailDemo.tsx  FieldValidationDemo.tsx  RadioDemos.tsx  SelectDemos.tsx  SwitchFieldDemo.tsx  TextareaFieldDemo.tsx
apps/docs/src/layouts/: Layout.astro
apps/docs/src/pages/: changelog.astro  index.astro
apps/docs/src/pages/react/: buttons.astro  cards.astro  index.astro  inputs.astro
apps/docs/src/styles/: global.css
python/aortl-admin/: .gitignore  README.md  hatch_build.py  pyproject.toml
python/aortl-admin/scripts/: sync_css.py
python/aortl-admin/src/aortl_admin/: __init__.py  apps.py  forms.py
python/aortl-admin/src/aortl_admin/management/commands/: aortl_admin_init.py
python/aortl-admin/src/aortl_admin/templates/aortl/: display_form.html  errors.html  errors_formset.html  field.html  uni_form.html  whole_uni_form.html
python/aortl-admin/src/aortl_admin/templates/aortl/layout/: accordion-group.html  accordion.html  baseinput.html  checkboxselectmultiple.html  column.html  div.html  field_errors_block.html  fieldset.html  formset.html  help_text.html  help_text_and_errors.html  multifield.html  radioselect.html  row.html  tab-link.html  tab.html
python/aortl-admin/src/aortl_admin/templates/aortl_admin/: _navbar.html  _sidebar.html  base.html
python/aortl-admin/src/aortl_admin/templatetags/: aortl_admin.py
python/aortl-admin/tests/: conftest.py  settings.py  test_crispy_pack.py  test_css_source_dir.py  test_forms_mixin.py  test_init_command.py  test_template_tags.py
skills/admin-design-system/: SKILL.md
skills/admin-design-system/references/basics/: colors.md  customize.md  dark-mode.md  hotkeys.md  icons.md  principles.md  slots.md  typography.md
skills/admin-design-system/references/components/: accordions.md  alerts.md  avatar.md  badges.md  brand-tile.md  breadcrumbs.md  buttons.md  cards.md  charts.md  code-blocks.md  container.md  dialog.md  drawer.md  grid.md  indicator.md  kbd.md  links.md  list.md  menus.md  pagination.md  progress.md  property-list.md  prose.md  row.md  separator.md  spinners.md  stat-cards.md  tables.md  tabs.md  timeline.md  tooltip.md
skills/admin-design-system/references/getting-started/: react.md  scoped.md  skill.md  tailwind.md  vanilla.md
skills/admin-design-system/references/modules/: app-shell.md
(+91 files in other folders)
